Created crud functionalities for post